--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -3,6 +3,11 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
 }
+.spinner{
+    margin-left: 60%;
+    width: 450px;
+    height:300px;
+}
 
 @media (max-width: 575px) {
     .home {
